iowow (1.2.14) UNRELEASED; urgency=medium

  * BUG: Clang6 fatal error: variable 'cur' is used uninitialized  (#15)
  * Added iwkv_new_db(IWKV iwkv, iwdb_flags_t dbflg, uint32_t *odbid, IWDB *dbp) (iwkv.h)
  * Removed unused `IWKV_NOLOCKS` option.
  * Added `IW_EXPORT` to `iowow_version_*` API functions  (iowow.h)
  * Added iwrc iwkv_state(IWKV iwkv, IWFS_FSM_STATE *out) (iwkv.h)
  * Do not check `IWKV_NO_OVERWRITE` for databases in `IWDB_DUP_UINTXX_VALS` mode
  * Added iwkv_puth() with provided old value interceptor: `IWKV_PUT_HANDLER` (iwkv.h)
  * Added `IWKV_RC_DUP_ARRAY_EMPTY` flag and `IWKV_DUP_REPORT_EMPTY` opflag for `iwkv_put()` (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 20 Oct 2018 20:33:30 +0700

iowow (1.2.13) testing; urgency=medium

  * BUG: Correct cursors adjustments during db update operations (#13)
  * BUG: Fixed WAL integration for updates in IWDB_DUP_UINT32_VALS|IWDB_DUP_UINT64_VALS mode
  * Store arbitrary data blocks associated with iwkv internal databases (#12)
  * Checking of max key/value size (IWKV_MAX_KVSZ) for updates in IWDB_DUP_UINT32_VALS|IWDB_DUP_UINT64_VALS mode
  * Minor allocation performance optimizations in _kvblk_addkv()

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 02 Aug 2018 20:29:08 +0700

iowow (1.2.12) testing; urgency=medium

  * Set terminating '\0' in iwitoa() (iwconv.h)
  * Added MAP_NORESERVE option for PRIVATE mmaping on Linux (#11)
  * Added iwu_file_read_as_buf() (iwutils.h)
  * Optimized cmake config files generation

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 21 Jul 2018 01:59:40 +0700

iowow (1.2.11) testing; urgency=medium
  * iwpool refactoring fixed pool memory corruption (iwpool.h)
  * Fixed set terminating `\0` in iwpool_strdup() (iwpool.h)
  * Fixed wrong `if` in iwpool_calloc() (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 15 Jun 2018 17:58:20 +0700

iowow (1.2.10) testing; urgency=medium

  * Added iwpool_calloc() (iwpool.h)